--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "app",
   "private": "true",
   "dependencies": {
-    "react-rails": "^0.2.5"
+    "antd": "^4.21.7",
+    "react-rails": "^0.2.5",
+    "react-router-dom": "^6.3.0"
   }
 }
